# Mimic

./: .gitignore  Cargo.toml  Mimic.sln  README.md  docker-compose.yml
.github/workflows/: build.yml  bump-version.yml  create-release.yml
App/: App.csproj  Dockerfile  JsonParser.cs  Program.cs  ResponseFactory.cs
App/Configuration/: Options.cs
App/Extensions/: EndpointRouteBuilderExtensions.cs
App/Models/: MockEndpoint.cs
App/Properties/: launchSettings.json
endpoints/: test.json
src/: json_parser.rs  main.rs
